--- a/sass/partials/_components.scss
+++ b/sass/partials/_components.scss
@@ -10,6 +10,7 @@
   font-family: $font-text;
   font-size: $font-size-1;
   font-weight: 500;
+  text-align: center;
 
   min-width: 11.625rem;
   padding: 1.05rem 1.55rem;
